:gear: Updates config

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Purpletual Blog Theme
+title: Django News Blog
 description: A starter kit for using Tailwind with Jekyll
 author: Your Name
 
