:gear: Updates gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-_site
+.bundle/
 .DS_Store
+.idea
 .jekyll-cache
 .jekyll-metadata
+.vendor
+_site
 assets/css
 node_modules
-.bundle/
 vendor/
-.idea
